src/conferences/aics-nyc/sass/partials/_hero.sass
.hero
	--_heroPaddingTop: 170px
	--_heroPaddingBottom: 80px
	display: flex
	position: relative
	min-height: max-content
	min-height: fit-content
	height: 100svh
	max-height: 900px
	padding: var(--_heroPaddingTop) 0 var(--_heroPaddingBottom)
	@media screen and (max-height: 760px) and (min-width: 1025px)
		--_heroPaddingTop: 140px
		--_heroPaddingBottom: 40px
	+tablet
		--_heroPaddingBottom: 40px
		--_heroPaddingTop: 140px
		max-height: none

	+sm
		--_heroPaddingBottom: 32px
		--_heroPaddingTop: 124px

	&__inner
		display: flex
		flex-direction: column
		position: relative
		gap: 40px 0
		min-height: min-content

	&__head
		margin: auto 0
		display: flex
		flex-direction: column
		gap: 32px 0

	&__date
		display: flex
		flex-wrap: wrap
		gap: 4px 12px
		font-size: 16px
		line-height: 1.2
		font-weight: 600
		text-transform: capitalize
		p
			padding-right: 12px
			border-right: 1px solid
			&:first-child
				+sm
					border-right: none
					padding-right: 0
					width: 100%
			&:last-child
				border-right: none
				padding-right: 0

	&__title
		font-family: var(--ff-msw)
		line-height: 1
		font-size: clamp(52px, 4.946vw, 68px)
		font-weight: 700
		max-width: clamp(602px,70vw,980px)
		word-spacing: 10px
		letter-spacing: -0.02em
		text-transform: uppercase

		+sm
			word-spacing: 4px
			line-height: .9
			font-size: clamp(38px, 7vw, 52px)
			max-width: 500px

	&__bottom
		display: flex
		flex-wrap: wrap
		align-items: flex-start
		justify-content: space-between
		gap: 40px
		width: 100%

		+md
			flex-direction: column
			gap: 30px
		+xs
			gap: 20px

	&__content
		flex: none
		display: flex
		flex-direction: column
		gap: 25px

		+sm
			width: 100%
			margin-left: 0
		+xxxs
			gap: 20px

	&__partners
		max-width: 140px
		width: fit-content
		gap: 32px
		display: flex
		flex-direction: column
		+md

			display: none

	&__partner
		flex: none
		align-self: end
		text-align: right
		align-self: flex-end
		+md
			text-align: left
			max-width: 150px
			width: calc(50% - 16px)
		&-title
			margin-top: 8px
			padding-top: 8px
			border-top: 1px solid #000
			font-size: 12px

	&__btn
		display: flex
		flex-wrap: wrap
		gap: 12px 24px
		flex: none
		width: 40%

		// +md
		// 	width: 240px
		+md
			width: 100%
			gap: 12px 12px

		.btn
			flex: 1 1 auto
			font-size: 14px
			height: auto
			min-height: 84px

			white-space: normal
			text-transform: uppercase
			@extend .btn--with-arrow
			@media screen and (max-height: 760px) and (min-width: 1200px)
				min-height: 70px

			+sm
				min-height: 64px

	&__descr
		letter-spacing: -0.32px
		line-height: 1.2
		text-transform: uppercase
		font-size: 16px
		max-width: 440px
		+sm
			font-size: 14px
			max-width: 400px
		+xs
			font-size: 12px
			max-width: 350px

		p:not(:last-child)
			margin-bottom: 20px

	&__video

		background: linear-gradient(0deg, rgba(250, 255, 5, 0.50) 0%, rgba(250, 255, 5, 0.50) 100%), #F9FF00

		position: absolute
		top: calc(var(--_heroPaddingTop) * -1)
		right: calc( var(--container) * -1)
		max-height: calc(100% + var(--_heroPaddingTop) + var(--_heroPaddingBottom))
		min-height: 700px
		width: calc(100% + var(--container))
		max-width: 1680px
		aspect-ratio: 3/1.87
		z-index: -1
		clip-path: polygon(45% 33%,67% 0,138% 0%,38% 88%,40% 60%,0 97%,48% 6%)
		+xxl
			right: calc((140px - var(--container)) * -1)
		+tablet
			width: 110%
			max-width: none
		+md
			width: 120vw
			right: calc((270px - var(--container)) * -1)
			min-height: 600px
		+sm
			min-height: 500px
			width: 1070px
			left: -100px
			right: auto
		+xs
			left: -200px

		video
			opacity: 0.4
			position: absolute
			left: 0
			top: 0
			width: 100%
			height: 100%

			object-fit: cover
			object-position: center
			pointer-events: none

			+sm
				display: none

			@media (prefers-reduced-motion)
				display: none
	&__info
		flex: none
		margin-top: auto
		align-items: flex-end
		display: flex
		gap: 0 24px
		+md
			gap: 30px 24px
			flex-wrap: wrap
		.h-list
			flex: 1

	.social
		flex-direction: column
		flex: none
		width: 24px
		align-items: flex-start
		justify-content: flex-end
		+sm
			display: none
		&__link
			position: relative

			&:hover
				span
					width: auto
					opacity: 1
		span
			position: absolute
			left: 100%
			padding-left: 5px
			top: 0
			height: 100%
			display: flex
			align-items: center
			opacity: 0
			width: 0
			color: var(--colorBlack)

			font-size: 14px
			overflow: hidden
			white-space: nowrap
			transition: opacity 0.1s linear, width 0.2s linear

	.supported
		flex: none
		align-self: end
		text-align: right
		align-self: flex-end
		display: flex
		flex-direction: column

		+md
			text-align: left
			max-width: 154px

		&__caption
			margin-top: 8px
			padding-top: 8px
			border-top: 1px solid #000
			font-size: 12px
			order: 2

		img
			max-width: 120px

.h-dates
	display: flex
	gap: 20px 32px
	flex-wrap: wrap
	+sm
		gap: 20px 16px
	&__title
		width: 100%
		font-size: 16px
		font-weight: 500
	&__item
		flex: none
		font-size: 14px
		position: relative
		+md
			flex: 1 1 auto
			max-width: 180px
			gap: 24px
		+sm
			width: calc(50% - 8px)
			font-size: 12px

	&__location
		display: flex
		align-items: center
		gap: 8px

	&__name

		font-weight: 500
		text-transform: capitalize
		&[href]
			text-decoration: underline
			&:hover
				text-decoration: none

	&__flag
		width: 14px
		height: 14px

		img
			width: 100%
			height: 100%
			display: block

	&__text
		padding-left: 22px
		font-weight: 500
		text-transform: capitalize
		line-height: 1.2
		display: block
		margin-top: 4px

.hero-inner
	padding: 200px 0 60px
	background-position: center
	background-size: cover
	background-repeat: no-repeat
	text-align: center
	min-height: 440px
	display: flex
	align-items: center
	+md
		padding: 150px 0 40px
		min-height: 320px
	+sm
		min-height: 260px
	.container
		display: grid
		width: 100%
		gap: 32px
	&__title
		font-size: 64px
		line-height: 1.1
		font-weight: 700
		font-family: var(--ff-msw)
		color: #fff
		+md
			font-size: 52px
		+sm
			font-size: 32px
	&__logo

		display: none

	&__date
		font-size: 20px
		+md
			font-size: 16px
	&--faq
		.hero-inner__title
			font-size: clamp(90px, 17vw, 200px)

	&--schedule
		padding: 40px 0 !important
		min-height: 180px !important
		text-align: left
		background-image: url(../img/screens-done-op.svg) !important
		background-position: center top !important
		+sm
			text-align: center

		.hero-inner__logo
			display: block
			margin-left: auto
			margin-right: auto
			grid-column: 2/3
			+sm
				grid-column: auto
		.hero-inner__title
			display: none

		.hero-inner__date
			+sm
				order: 1
		.container
			grid-template-columns: 1fr auto 1fr
			align-items: center
			gap: 24px
			+sm
				grid-template-columns: 1fr

.logo
	display: block
	width: 100%
	img
		width: 100%

.h-list
	display: flex

	&__item
		flex: 1
		display: flex
		flex-direction: column
		max-width: 250px
		gap: 12px
		border-left: 1px dashed $black
		padding: 0 16px

		+md
			flex: 1
			padding: 0 12px

	&__value
		font-size: 56px
		font-family: var(--ff-msw)
		font-weight: 600
		order: 1
		margin-top: auto
		line-height: 0.8
		@media screen and (max-height: 760px) and (min-width: 1200px)
			font-size: 44px

		+xxl
			font-size: clamp(44px, 4.5vw, 56px)
		+xs
			font-size: 32px
	&__text
		line-height: 1.2
		letter-spacing: -0.32px
		font-size: 14px
		text-transform: capitalize
		text-wrap: balance
		max-width: 200px
		+xxs
			font-size: 12px

	&:has(.h-list__item:last-child:nth-child(2)) .h-list__item
		max-width: 50%

